# okvis

./: CMakeLists.txt  README.md  run_euroc.sh  run_euroc_pangolin.sh
config/: config_euroc_mono.yaml
okvis_apps/src/: okvis_app_synchronous.cpp  okvis_app_synchronous_pangolin.cpp
okvis_ceres/: CMakeLists.txt~
okvis_ceres/src/: Estimator.cpp
okvis_common/include/okvis/: Measurements.hpp  VioParametersReader.hpp
okvis_common/src/: VioParametersReader.cpp
okvis_frontend/: CMakeLists.txt  CMakeLists.txt~
okvis_frontend/src/: Frontend.cpp  VioKeyframeWindowMatchingAlgorithm.cpp
okvis_multisensor_processing/: CMakeLists.txt
okvis_multisensor_processing/include/okvis/: ThreadedKFVio.hpp  (+1 more)
okvis_multisensor_processing/src/: ThreadedKFVio.cpp  pangolinViewer.cc
okvis_test/src/: testEstimator_plain.cpp  testFrame_plain.cpp  testHomogeneousPointError_plain.cpp  testIMUerror_plain.cpp  testMap_plain.cpp  testMarginalization_plain.cpp  testReprojectionError_plain.cpp
okvis_visualizer/: CMakeLists.txt
okvis_visualizer/include/okvis/: MapDrawer.h  Viewer.h
okvis_visualizer/src/: MapDrawer.cc  Viewer.cc
svo/: CMakeLists.txt  CMakeLists.txt~
svo/src/: ORBextractor.cc  PangolinDSOViewer.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  main.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  sparse_img_align.cpp  threadStereoImuVio.cpp
svo/test/: test_matcher.cpp  test_pose_optimizer.cpp  test_stereo_match.cpp  test_utils.h
(+10 files in other folders)
